--- a/styles/Blaze.module.css
+++ b/styles/Blaze.module.css
@@ -18,3 +18,17 @@
     height: 75vh;
     width: 100%;
 }
+
+.linkUpLeftCardImg {
+    height: 100%;
+    width: 75%;
+    object-fit: contain;
+    overflow-y: hidden;
+}
+
+@media screen and (max-width: 767px) {
+    .linkUpLeftCardImg {
+        height: 70%;
+        width: 75%;
+    }
+}
