--- a/styles/LinkUp.module.css
+++ b/styles/LinkUp.module.css
@@ -49,7 +49,6 @@
 }
 
 .linkUpRightCardsContainer {
-
     width: 43%;
     height: 100%;
     border-radius: 24px;
@@ -57,7 +56,10 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    gap: 1rem; /* Add spacing between the top and bottom sections */
 }
+
+
 
 .linkUpRightTopCardsCon {
 
@@ -81,7 +83,7 @@
     width: 33%;
     height: 100%;
 
-    padding: 1rem 2rem;
+    padding: 0.5rem 1.5rem;
     background-color: var(--black-accent);
     border-radius: 24px;
 }
@@ -112,13 +114,16 @@
 
 .LinkUpRightBottomCardCon {
     width: 100%;
+    height: 100%;
     background-color: var(--black-accent);
     border-radius: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    overflow: hidden; /* Ensure no overflow */
+    position: relative; /* For better child positioning */
 }
+
 
 .LinkUpCircleImg {
     width: 72px;
